implementação de funcionalidades: obter todos os endereços, registro de cpf unico, validadores de cpf adicionados, funcionalidade de salvar cpf sem mascara, e exibir com mascara
