# api/swagger/swagger.yaml
@@ -82,7 +82,7 @@ paths:
           description: "Updated user object"
           required: true
           schema:
-            $ref: "#/definitions/usuario"
+            $ref: "#/definitions/atualizar"
       responses:
         '201':
           description: Atualizado (Created)
@@ -109,11 +109,9 @@ paths:
           description: Requisição Inválida (Bad Request)
         '500':
           description: Erro Interno do Servidor (Internal Server Error)
-  # --
-  # Serviço responsavel por obter endereços de um usuario
-  # --
+  
   /usuario/{usuario_id}/endereco:
-    x-swagger-router-controller: endereco
+    x-swagger-router-controller: usuario
     get:
       tags:
         - Endereço
@@ -130,6 +128,7 @@ paths:
           description: Requisição Inválida (Bad Request)
         '500':
           description: Erro Interno do Servidor (Internal Server Error)
+  
   # --
   # Serviço de cadastramento de endereço
   # --
@@ -154,7 +153,26 @@ paths:
           description: Requisição Inválida (Bad Request)
         '500':
           description: Erro Interno do Servidor (Internal Server Error)
+    
+    # --
+    # Serviço responsavel por retornar todos os endereços
+    # --
+    get:
+      tags:
+        - Endereço
+      summary: Retorna dados de todos endereços
+      operationId: obter_enderecos
+      responses:
+        '201':
+          description: Feito!
+          schema:
+            $ref: "#/definitions/endereco"
+        '400':
+          description: Requisição Inválida (Bad Request)
+        '500':
+          description: Erro Interno do Servidor (Internal Server Error)
       
+  
   /docs:
     x-swagger-pipe: swagger_raw
     
@@ -173,6 +191,17 @@ definitions:
       - nome
       - data_nascimento
       - cpf
+  atualizar:
+    type: object
+    properties:
+      nome:
+        type: string
+      data_nascimento:
+        type: string
+        format: date   
+    required:
+      - nome
+      - data_nascimento
   endereco:
     type: object
     properties:
